Bug 273807 - Contact list crashes on right-click on a group
Summary: Contact list crashes on right-click on a group
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-21 18:42 UTC by Maxime Corteel
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace for this issue (4.12 KB, text/plain)
2011-05-22 20:28 UTC, Igor Poboiko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxime Corteel 2011-05-21 18:42:26 UTC
Version:           git-latest (using KDE 4.6.3) 
OS:                Linux

Whenever I right-click on a group, the contact list crashes.

Reproducible: Always

Steps to Reproduce:
Right-click on a group

Actual Results:  
Contact list crashed

Expected Results:  
...
Comment 1 Keith Rusler 2011-05-21 20:46:35 UTC
Backtrace would be nice. Make sure you compiled it with debug information.
Comment 2 Maxime Corteel 2011-05-21 20:50:32 UTC
I didn't compile it, I use the opensuse packages (which is nice because I'm much to lazy to compile).
So the backtrace is completely useless.
Comment 3 David Edmundson 2011-05-21 20:59:57 UTC
I would put money on it being this line:

        contact = m_groupsModel->data(m_modelFilter->mapToSource(index), AccountsModel::ItemRole).value<ContactModelItem*>()->contact();

what if you click on a header? That would then crash. 

Could also could be another side effect of whatever is causing the model filter to spasm out.
Comment 4 Igor Poboiko 2011-05-22 20:28:15 UTC
Created attachment 60221 [details]
Backtrace for this issue
Comment 5 David Edmundson 2011-05-23 00:11:37 UTC
Git commit f21a51613725f391967e59fd57c8afee637d8bfe by David Edmundson.
Committed on 23/05/2011 at 00:03.
Pushed by davidedmundson into branch 'master'.

Tidied up code in onContextMenuRequested

Fixes crash on right click on header of groups model.

BUG: 273807

M  +6    -7    main-widget.cpp     

http://commits.kde.org/telepathy-contact-list/f21a51613725f391967e59fd57c8afee637d8bfe