Tidied up code in onContextMenuRequested

Fixes crash on right click on header of groups model.

BUG: 273807